--- a/UCBC 2024/Simulations/Bidding6S.ipynb
+++ b/UCBC 2024/Simulations/Bidding6S.ipynb
@@ -94,7 +94,7 @@
     "hand = 'Q6542.QJ7.AKT6.7'\n",
     "\n",
     "auction = [\"PAD_START\", \"PAD_START\"]\n",
-    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, False)\n",
+    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 2, False)\n",
     "\n",
     "bid = bot_bid.bid(auction)\n",
     "bid.to_dict()['candidates']\n",
