--- a/src/examples/Bidding.ipynb
+++ b/src/examples/Bidding.ipynb
@@ -290,7 +290,7 @@
    "source": [
     "# we got some samples above. if we want more, we can always get more\n",
     "\n",
-    "sample_hands, sorted_score, p_hcp, p_shp = bot_bid.sample_hands(['PAD_START', 'PAD_START', 'PAD_START','2N','PASS','3C','PASS','3D'])\n",
+    "sample_hands, sorted_score, p_hcp, p_shp = bot_bid.sample_hands_auction(['PAD_START', 'PAD_START', 'PAD_START','2N','PASS','3C','PASS','3D'])\n",
     "\n",
     "for i in range(sample_hands.shape[0]):\n",
     "    print(f'{hand_to_str(sample_hands[i, 0, :])} {hand_to_str(sample_hands[i, 1, :])} {hand_to_str(sample_hands[i, 2, :])} {hand_to_str(sample_hands[i, 3, :])}')"
