--- a/UCBC 2024/Simulations/Bidding1NOvercall.ipynb
+++ b/UCBC 2024/Simulations/Bidding1NOvercall.ipynb
@@ -83,7 +83,7 @@
     "hand = 'AQJ986.QJ952.7.8'\n",
     "\n",
     "auction = [\"PASS\", \"1N\"]\n",
-    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, False)\n",
+    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 2, False)\n",
     "\n",
     "bid = bot_bid.bid(auction)\n",
     "bid.to_dict()['candidates']\n",
@@ -175,7 +175,7 @@
    "source": [
     "# we got some samples above. if we want more, we can always get more\n",
     "auction = [\"PASS\", \"1N\"]\n",
-    "sample_hands, sorted_score, p_hcp, p_shp = bot_bid.sample_hands(auction)\n",
+    "sample_hands, sorted_score, p_hcp, p_shp = bot_bid.sample_hands_auction(auction)\n",
     "\n",
     "for i in range(min(10,sample_hands.shape[0])):\n",
     "    print(f'{hand_to_str(sample_hands[i, 0, :])} {hand_to_str(sample_hands[i, 1, :])} {hand_to_str(sample_hands[i, 2, :])} {hand_to_str(sample_hands[i, 3, :])} {sorted_score[i]:.2f}')"
