--- a/UCBC 2024/Simulations/Bidding1S.ipynb
+++ b/UCBC 2024/Simulations/Bidding1S.ipynb
@@ -83,7 +83,7 @@
     "hand = 'A.8xx.Jxx.AQxxxx'\n",
     "\n",
     "auction = [\"1S\"]\n",
-    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, False)\n",
+    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 1, False)\n",
     "\n",
     "bid = bot_bid.bid(auction)\n",
     "bid.to_dict()['candidates']\n",
