--- a/UCBC 2024/Simulations/Bidding2H.ipynb
+++ b/UCBC 2024/Simulations/Bidding2H.ipynb
@@ -89,7 +89,7 @@
     "hand = 'AKQJ95.J54..K953'\n",
     "\n",
     "auction = [\"PAD_START\", \"2D\", \"PASS\"]\n",
-    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, False)\n",
+    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 3, False)\n",
     "\n",
     "bid = bot_bid.bid(auction)\n",
     "bid.to_dict()['candidates']\n",
@@ -208,7 +208,7 @@
     "# we got some samples above. if we want more, we can always get more\n",
     "\n",
     "auction = [\"PAD_START\", \"PAD_START\", \"PAD_START\", \"PASS\", \"1N\", \"PASS\", \"3S\",\"PASS\"]\n",
-    "sample_hands, sorted_score, p_hcp, p_shp = bot_bid.sample_hands(auction)\n",
+    "sample_hands, sorted_score, p_hcp, p_shp = bot_bid.sample_hands_auction(auction)\n",
     "\n",
     "for i in range(min(10,sample_hands.shape[0])):\n",
     "    print(f'{hand_to_str(sample_hands[i, 0, :])} {hand_to_str(sample_hands[i, 1, :])} {hand_to_str(sample_hands[i, 2, :])} {hand_to_str(sample_hands[i, 3, :])} {sorted_score[i]:.2f}')"
