--- a/UCBC 2024/Simulations/Bidding4SX.ipynb
+++ b/UCBC 2024/Simulations/Bidding4SX.ipynb
@@ -109,7 +109,7 @@
     "# if South deals we have two pads (because North and East are skipped)\n",
     "# etc.)\n",
     "auction = [\"PAD_START\", \"PAD_START\", \"PASS\", \"PASS\"]\n",
-    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, False)\n",
+    "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, 0, False)\n",
     "\n",
     "bid = bot_bid.bid(auction)\n",
     "bid.to_dict()['candidates']\n",
@@ -227,7 +227,7 @@
    "source": [
     "# we got some samples above. if we want more, we can always get more\n",
     "\n",
-    "sample_hands, sorted_score, p_hcp, p_shp = bot_bid.sample_hands([\"PAD_START\", \"PAD_START\", \"PAD_START\", \"PASS\", \"1N\", \"PASS\", \"3S\",\"PASS\"])\n",
+    "sample_hands, sorted_score, p_hcp, p_shp = bot_bid.sample_hands_auction([\"PAD_START\", \"PAD_START\", \"PAD_START\", \"PASS\", \"1N\", \"PASS\", \"3S\",\"PASS\"])\n",
     "\n",
     "for i in range(sample_hands.shape[0]):\n",
     "    print(f'{hand_to_str(sample_hands[i, 0, :])} {hand_to_str(sample_hands[i, 1, :])} {hand_to_str(sample_hands[i, 2, :])} {hand_to_str(sample_hands[i, 3, :])}')"
