--- a/UCBC 2024/Simulations/bidding_info.ipynb
+++ b/UCBC 2024/Simulations/bidding_info.ipynb
@@ -12,7 +12,7 @@
       "WARNING:tensorflow:From c:\\Python311\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "non-resource variables are not supported in the long term\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding-2584000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding-10724000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo-6131000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-154000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-59000\n",
@@ -47,37 +47,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n_steps 1\n"
+      "n_steps 3\n",
+      "[[[ 1.   99.    0.    1.   -0.75 -0.14 -0.71  1.   -0.14  0.    0.    1.    0.    1.    0.    0.    1.    0.    0.    0.    0.    1.    0.    1.    0.    0.    1.    1.    0.    1.    0.    1.\n",
+      "    1.    0.    0.    0.    0.    0.    0.    1.    2.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    0.  ]\n",
+      "  [ 1.   99.    0.    1.   -0.75 -0.14 -0.71  1.   -0.14  0.    0.    1.    0.    1.    0.    0.    1.    0.    0.    0.    0.    1.    0.    1.    0.    0.    1.    1.    0.    1.    0.    1.\n",
+      "    1.    0.    0.    0.    0.    0.    0.    1.    2.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.\n",
+      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    0.  ]\n",
+      "  [ 1.   99.    0.    1.   -0.75 -0.14 -0.71  1.   -0.14  0.    0.    1.    0.    1.    0.    0.    1.    0.    0.    0.    0.    1.    0.    1.    0.    0.    1.    1.    0.    1.    0.    1.\n",
+      "    1.    0.    0.    0.    0.    0.    0.    1.    2.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    1.    0.    0.    0.    0.    0.\n",
+      "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
+      "    0.  ]]]\n"
      ]
     }
    ],
    "source": [
-    "auction = [\"PAD_START\",\"2S\"]\n",
+    "auction = ['PAD_START', 'PAD_START', 'PAD_START', 'PASS', 'PASS', '1N', '2C','PAD_START']\n",
     "n_steps = binary.calculate_step(auction)\n",
     "print(\"n_steps\", n_steps)\n",
     "nesw_i = 2\n",
     "vuln = [False, True]\n",
-    "hand = binary.parse_hand_f(32)(\"QJ985.AJ4.K984.3\")\n",
-    "A = binary.get_auction_binary(n_steps, auction, nesw_i, hand, vuln, models.ns, models.ew)\n"
+    "hand = binary.parse_hand_f(32)(\"QT5.T8.KQT87.864\")\n",
+    "A = binary.get_auction_binary(n_steps, auction, nesw_i, hand, vuln, models.ns, models.ew)\n",
+    "print(A)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c_shp:5.9\n"
+      "c_hcp:[[ 6.32 10.24 16.77]]\n"
      ]
     }
    ],
@@ -97,23 +116,15 @@
     "c_hcp = p_hcp.copy()\n",
     "c_shp = p_shp.copy()\n",
     "\n",
-    "#print(f\"c_hcp:{c_hcp}\")\n",
-    "print(f\"c_shp:{c_shp[0][8]:.1f}\")\n"
+    "print(f\"c_hcp:{c_hcp}\")\n",
+    "#print(f\"c_shp:{c_shp[0][8]:.1f}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 4.96 20.62  8.25]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "auction = ['PAD_START', '2C','4N']\n",
     "n_steps = binary.calculate_step(auction)\n",
@@ -129,18 +140,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[20.62 10.59  5.65]\n",
-      " [21.36 10.05  5.04]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "auction = ['PAD_START', '2C','4N','PASS']\n",
     "n_steps = binary.calculate_step(auction)\n",
